Improve README with detailed docs on architecture, setup, and development